--- a/yoneda-speedrun/yoneda-speedrun.tex
+++ b/yoneda-speedrun/yoneda-speedrun.tex
@@ -184,7 +184,7 @@ We will call this collection $\Arrows(\CC)$. \end{itemize}%
 The objects and arrows of a category satisfy the following conditions:
 \begin{itemize}
 \item
-Each arrow $f$ maps one object $A \in \objc$ to another object $B \in \objc$ and we denote
+Each arrow $f$ connects one object $A \in \objc$ to another object $B \in \objc$ and we denote
 this by writing $f: A \to B$. $A$ is called the {\it domain} of $f$ and $B$ the {\it
 codomain}.
 \item
@@ -284,7 +284,7 @@ F(f)$ (or $F(gf) = F(g)F(f)$).
 \end{defn}
 \ni
 Thus, the mappings that make up a functor preserve all of the structure of the source category
-in its target, namely, domains and codomains, composition, and the identities.
+in its target, namely domains and codomains, composition, and the identities.
 
 If $F: \CC \to \DD$ is a functor from a category $\CC$ to another category $\DD$ and an
 object $X \in \CC$ we may write $F X$ to mean $F(X)$. This is analogous to the more
