--- a/yoneda-speedrun/yoneda-speedrun.tex
+++ b/yoneda-speedrun/yoneda-speedrun.tex
@@ -394,8 +394,10 @@ $\Nat(F, G)$ for the set of all natural transformations from $F$ to $G$, which i
 context is the same as the arrows from $F$ to $G$ in the functor category.
 \end{defn}
 \ni
-You will also see people write $\Hom(F, G)$, $\Hom_{\CC}(F,G)$ or even $\CC(F,G)$ for this
-in the context a functor category $\CC$.
+You will also see people write $\Hom(F, G)$, $\Hom_{[\CC,\DD]}(F,G)$, or 
+$[\CC,\DD](F,G)$ for this. Or, if $\cat{K}$ is a functor category then 
+people will write $\Hom_{\cat{K}}(F,G)$ or
+$\cat{K}(F,G)$ for this.
 
 \section{Representing Functors}
 
