--- a/yoneda-speedrun/yoneda-speedrun.tex
+++ b/yoneda-speedrun/yoneda-speedrun.tex
@@ -524,7 +524,7 @@ So now we can break it down:
 \item In principle the natural transformations from $\Arrows(X, -) \fto F$ could be a
 giant complicated thing.
 \item But actually it can only be as large as $FX$. The fact that this mapping is
-invertible implies that $\Nat(\Arrows(X, -),F)$ and  $FX$ are isomorphic (e.g.
+invertible implies that $\Nat(\Arrows(X, -),F)$ and  $FX$ are isomorphic (that is,
 $\Nat(\Arrows(X, -),F) \iso FX$).
 \item In other words, every natural transformation from $\Arrows(X, -)$ to $F$ is the same
 as an element of the set $FX$. In particular, all we need to know is how $\alpha_X(1_X)$
