--- a/yoneda-speedrun/yoneda-speedrun.tex
+++ b/yoneda-speedrun/yoneda-speedrun.tex
@@ -760,7 +760,7 @@ Theory}, 2016.
 Working Mathematician}, Second Edition, Springer, 1978.
 
 \bibitem{Perrone} Paolo Perrone, \href{https://arxiv.org/abs/1912.10642}{\it Notes on
-Category Theory with examples from basic mathematics}.
+Category Theory with examples from basic mathematics}, 2019.
 
 \bibitem{Rhiel2016} Emily Rhiel, \href{https://math.jhu.edu/~eriehl/context/}{\it Category
 Theory in Context}, Dover, 2016.
