--- a/yoneda-speedrun/yoneda-speedrun.tex
+++ b/yoneda-speedrun/yoneda-speedrun.tex
@@ -749,7 +749,7 @@ Notes}, 2013.
 \href{http://pi.math.cornell.edu/~dmehrle/notes/partiii/cattheory_partiii_notes.pdf}{\it
 Category Theory}, notes written by David Mehrle, 2015.
 
-\bibitem{Leinster} Tom Leinster, \href{https://arxiv.org/abs/1612.09375}{Basic Category
+\bibitem{Leinster} Tom Leinster, \href{https://arxiv.org/abs/1612.09375}{\it Basic Category
 Theory}, 2016.
 
 \bibitem{lobos} LobosJr, \href{https://www.youtube.com/watch?v=ImMOdTxtf-s}{\it Dark Souls
