--- a/yoneda-speedrun/yoneda-speedrun.tex
+++ b/yoneda-speedrun/yoneda-speedrun.tex
@@ -652,8 +652,8 @@ abstracted over all the objects and arrows. Also note that we could have also de
 as $\yo:\CC^\op \to \Fun(\CC, \Set)$ using duality. All that changes is the 
 order of the arguments in the functors.
 
-The Yoneda lemma can now be used to prove that these mappings are naturally invertible, so
-$\yo$ completely characterizes, or {\it embeds}, the category $\CC$ inside the functor
+The Yoneda lemma can now be used to prove that these mappings are invertible, so
+$\yo$ is what is called an {\it embedding} of the category $\CC$ inside the functor
 category $\Fun(\CC^\op, \Set)$. Thus $\yo$ is called the {\it Yoneda embedding}, and you
 can read about the rest of the details in the references.
 
@@ -685,11 +685,7 @@ Second, I wish I could have thought of a better notation for the represented fun
 than $\Arrows(X,-)$ with all that placeholder nonsense. I don't like how the placeholders
 can stand in for anything you want and how their meaning can shift and change in different contexts.
 But, even with those problems it's better than hiding the definition behind yet another
-layer of naming (e.g. $\h_X$), which is the only other obvious choice. If I did do that, I'd use
-a name besides $\h$ anyway. It seems like $R$, or $\mathop{\mathit{Rep}}$, or $\mathop{\mathit{Represented}}$ or something makes
-much more sense. But, I'll just take comfort in the fact that no
-one else has done any better. At some point I'll probably make a version of this document
-that uses one of the more standard systems of notation. But for now I like my verbosity.
+layer of naming (e.g. $\h_X$), which is the only other obvious choice. 
 
 Third, you might have found my use of $\yo$ for the Yoneda embedding to be frivolous, and perhaps
 childish. And I would have agreed. But then I read in multiple sources that
