--- a/yoneda-speedrun/yoneda-speedrun.tex
+++ b/yoneda-speedrun/yoneda-speedrun.tex
@@ -133,7 +133,7 @@ way to the main event, the Yoneda lemma {\it is} a main event. It is a result th
 expresses one of the main goals of category theory: it characterizes universal facts about
 general abstract constructs.
 
-Its statement is deceivingly simple \cite{Rhiel2016}:
+Its statement is deceivingly simple \cite{Riehl2016}:
 
 \pg
 Let $\CC$ be a locally small category. Let $X$ be an object of $\CC$, and let $F: \CC \to
@@ -563,9 +563,9 @@ The notation $\pshf{\CC}(\h_X, F)$ denotes the arrows in the functor
 category $\pshf{\CC}$ between $\h_X$ and $F$, so it's the same as $\Nat(\h_X, F)$.
 
 \pg
-Emily Rhiel's \cite{Rhiel2016} version is what I used at the top:
+Emily Riehl's \cite{Riehl2016} version is what I used at the top:
 
-\begin{lemma}[Yoneda]\label{yoneda-rhiel} Let $\CC$ be a locally small category and $X \in
+\begin{lemma}[Yoneda]\label{yoneda-Riehl} Let $\CC$ be a locally small category and $X \in
 \CC$. Then for any functor $F : \CC \to \Set$ there is a bijection
 $$
 \Hom(\CC(X,-), F) \iso FX
@@ -695,11 +695,11 @@ the Yoneda embedding is sometimes denoted by \!\!よ, the hiragana kana for ``Yo
 Given this, how could I resist?
 
 Finally, I need to shout out the 
-\href{https://www.youtube.com/watch?v=SsgEvrDFJsM}{excellent tutorial video by Emily Rhiel} 
+\href{https://www.youtube.com/watch?v=SsgEvrDFJsM}{excellent tutorial video by Emily Riehl} 
 that demonstrates how this result works
-the specific category of matrices \cite{Rhiel2020}. After watching this talk the second time.
+the specific category of matrices \cite{Riehl2020}. After watching this talk the second time.
 Her book, \href{https://math.jhu.edu/~eriehl/context/}{\it Category
-Theory in Context}, is also excellent \cite{Rhiel2016}. Recommended.
+Theory in Context}, is also excellent \cite{Riehl2016}. Recommended.
 
 \newpage
 
@@ -758,10 +758,10 @@ Working Mathematician}, Second Edition, Springer, 1978.
 \bibitem{Perrone} Paolo Perrone, \href{https://arxiv.org/abs/1912.10642}{\it Notes on
 Category Theory with examples from basic mathematics}, 2019.
 
-\bibitem{Rhiel2016} Emily Rhiel, \href{https://math.jhu.edu/~eriehl/context/}{\it Category
+\bibitem{Riehl2016} Emily Riehl, \href{https://math.jhu.edu/~eriehl/context/}{\it Category
 Theory in Context}, Dover, 2016.
 
-\bibitem{Rhiel2020} Emily Rhiel, \href{https://www.youtube.com/watch?v=SsgEvrDFJsM}{ACT
+\bibitem{Riehl2020} Emily Riehl, \href{https://www.youtube.com/watch?v=SsgEvrDFJsM}{ACT
 2020 Tutorial: {\it The Yoneda lemma in the category of matrices}}.
 
 \bibitem{Smith} Peter Smith,
