--- a/bib.bib
+++ b/bib.bib
@@ -1,7 +1,7 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Pete Su at 2021-10-25 07:58:29 -0400 
+%% Created for Pete Su at 2021-10-25 08:03:44 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -34,9 +34,9 @@
 	year = {1978}}
 
 @misc{RiehlMatrix2020,
-	author = {Emily Rhiel},
+	author = {Emily Riehl},
 	date-added = {2021-10-24 09:55:22 -0400},
-	date-modified = {2021-10-25 07:55:09 -0400},
+	date-modified = {2021-10-25 08:03:44 -0400},
 	note = {\href{https://www.youtube.com/watch?v=SsgEvrDFJsM}{https://www.youtube.com/watch?v=SsgEvrDFJsM}},
 	title = {{ACT 2020 Tutorial: The Yoneda lemma in the category of matrices}},
 	year = {2020}}
@@ -57,9 +57,9 @@
 	year = {2013}}
 
 @book{Riehl2016,
-	author = {Emily Rhiel},
+	author = {Emily Riehl},
 	date-added = {2021-10-24 09:42:03 -0400},
-	date-modified = {2021-10-25 07:54:42 -0400},
+	date-modified = {2021-10-25 08:03:40 -0400},
 	note = {\href{https://math.jhu.edu/~eriehl/context/}{https://math.jhu.edu/~eriehl/context/}},
 	publisher = {Dover},
 	title = {{Category Theory In Context}},
@@ -91,7 +91,8 @@
 	primaryclass = {math.CT},
 	title = {{Category Theory}},
 	url = {http://pi.math.cornell.edu/~dmehrle/notes/partiii/cattheory_partiii_notes.pdf},
-	year = {2015}}
+	year = {2015},
+	bdsk-url-1 = {http://pi.math.cornell.edu/~dmehrle/notes/partiii/cattheory_partiii_notes.pdf}}
 
 @article{Nomura:2011rb,
 	archiveprefix = {arXiv},
