add a meta-blurb about categories

--- a/yoneda-speedrun/yoneda-speedrun.tex
+++ b/yoneda-speedrun/yoneda-speedrun.tex
@@ -254,8 +254,10 @@ injective and surjective, you see), so you will see that word sometimes.
 \section{Functors}
 
 As we navigate our way from basic categories up to the statement of the lemma we will
-travel through multiple layers conceptual abstraction. Functors are the first step up this
-ladder.
+travel through multiple layers conceptual abstraction. At the base of this ladder
+are the categories which themselves are already an abstraction of many specific ways
+of expressing ``mathematical structures''. But we have much higher to climb.
+Functors are the first step up.
 
 Functors are the {\it arrows between categories}. That is, if you were to define the
 category where the objects were all categories of some kind then the arrows would be
