--- a/yoneda-speedrun/yoneda-speedrun.tex
+++ b/yoneda-speedrun/yoneda-speedrun.tex
@@ -148,9 +148,9 @@ But as Sean Carroll famously wrote about general relativity, ``\dots, these stat
 incomprehensible unless you sling the lingo'' \cite{carroll}.
 
 I am going to do the following dumb thing: having stated a version of the lemma above I'm
-going to define only the parts of the category theory ``lingo'' needed to explain what it
-means. There are five or six layers of abstraction that I will try to explain and move
-through as quickly and clearly as possible.
+going to define only the parts of the category theory needed to explain what the lingo
+means.There are five or six layers of abstraction that I will 
+try to explain and move through as quickly and clearly as possible.
 
 In the spirit of video game speedruns \cite{lobos}, we will skip entire interesting areas
 of material in category theory in the name of getting to the end of our ``game'' as fast
