--- a/yoneda-speedrun/yoneda-speedrun.tex
+++ b/yoneda-speedrun/yoneda-speedrun.tex
@@ -149,8 +149,8 @@ incomprehensible unless you sling the lingo'' \cite{carroll}.
 
 I am going to do the following dumb thing: having stated a version of the lemma above I'm
 going to define only the parts of the category theory needed to explain what the lingo
-means.There are five or six layers of abstraction that I will 
-try to explain and move through as quickly and clearly as possible.
+means. There are five or six layers of abstraction that I will 
+try to explain. As for the larger meaning of the result itself, you are on your own. 
 
 In the spirit of video game speedruns \cite{lobos}, we will skip entire interesting areas
 of material in category theory in the name of getting to the end of our ``game'' as fast
