--- a/2109.12250/talks/introduction.tex
+++ b/2109.12250/talks/introduction.tex
@@ -149,7 +149,8 @@ Now let us attempt to provide a satisfactory answer to \Cref{qst:origin} when $ 
 \end{nul}
 
 \begin{nul}
-	The takeaway is that in \Cref{qst:origin}, we should really replace $ \Omega^{k-1}(M)/\im(d) $ by $ \Omega^{k-1}(M)/\Omegacl^{k-1}(M)_{\ZZ} $ and $ \Omegacl^k(M) $ by $ \Omegacl^0(M)_{\ZZ} $ and ask for the diagonal sequences to be short exact.
+	The takeaway is that in \Cref{qst:origin}, we should really replace $ \Omega^{k-1}(M)/\im(d) $ by \\
+	$ \Omega^{k-1}(M)/\Omegacl^{k-1}(M)_{\ZZ} $ and $ \Omegacl^k(M) $ by $ \Omegacl^0(M)_{\ZZ} $ and ask for the diagonal sequences to be short exact.
 \end{nul}
 
 
@@ -246,7 +247,8 @@ Now let us construct maps to fill in the ``differential cohomology'' diagram \eq
 		\ang{u,-} \colon \H_i(M;\ZZ) &\to \RR/\ZZ \\
 		[z] &\mapsto u(z) \period
 	\end{align*}
-	Since the circle $ \RR/\ZZ $ is an injective $ \ZZ $-module, for any $ \ZZ $-module $ A $ and integer $ j > 0 $, we have \smash{$ \Ext_{\ZZ}^j(A,\RR/\ZZ) = 0 $}.
+	Since the circle $ \RR/\ZZ $ is an injective $ \ZZ $-module, for any $ \ZZ $-module $ A $ and integer $ j > 0 $, we have \\
+	{$ \Ext_{\ZZ}^j(A,\RR/\ZZ) = 0 $}.
 	In particular, $ \ang{-,-} $ is an isomorphism.
 
 	Setting $ i = k - 1 $, precomposition with the quotient map $ \surjto{\Zsm_{k-1}(M;\ZZ)}{\H_{k-1}(M;\ZZ)} $ defines an injection
