--- a/2109.12250/talks/part1intro.tex
+++ b/2109.12250/talks/part1intro.tex
@@ -84,7 +84,7 @@ On the other hand, under the identification
 \begin{equation*}
 	\Gammaupperstar \colon \equivto{C}{\Shhi(\Man;C)}
 \end{equation*}
-the extreme left adjoint $ \Gammalowershriek $ corresponds to the left adjoint to the inclusion $ \Shhi(\Man;C) \subset \Sh(\Man;C) $.
+the extreme left adjoint $ \Gammalowershriek $ corresponds to the left adjoint to the inclusion $ \Shhi(\Man;C) \subset \break \Sh(\Man;C) $.
 We initially construct the left adjoint $ \Gammalowershriek $ abstractly via the Adjoint Functor Theorem, but since it plays a very important role throughout this text, it is useful to have an explicit formula for $ \Gammalowershriek $.
 \Cref{sec:localization} is dedicated to showing that $ \Gammalowershriek(F) $ is computed by a simple geometric realization.
 Write $ \Deltaalg^n $ for the hyperplane
