--- a/yoneda-speedrun/yoneda-speedrun.tex
+++ b/yoneda-speedrun/yoneda-speedrun.tex
@@ -179,7 +179,7 @@ We call this collection $\objc$. Traditionally people write just $\CC$ to mean $
 when the context makes clear what is going on.
 \item
 A collection of {\it arrows} denoted with lower case letters $f, g, h, ...$, and so on.
-Other names for {\it arrows} include {\it mappings} or {\it functions} or {\it morphims}.
+Other names for {\it arrows} include {\it mappings} or {\it functions} or {\it morphisms}.
 We will call this collection $\Arrows(\CC)$. \end{itemize}%
 The objects and arrows of a category satisfy the following conditions:
 \begin{itemize}
