--- a/yoneda-speedrun/yoneda-speedrun.tex
+++ b/yoneda-speedrun/yoneda-speedrun.tex
@@ -121,7 +121,7 @@ menucolor=blue,linktocpage=true]{hyperref}
 
 \title{\large A Yoneda Speedrun}
 \author{\large Pete Su}
-\date{\normalsize 2021-10-24}
+\date{\normalsize 2021-10-30}
 
 \maketitle
 
@@ -212,7 +212,7 @@ mappings that preserve some kind of structure. Category theory, and the Yoneda l
 it turns out, is mostly about the arrows.
 
 \goodbreak
-I have broken with well established tradition in the mathematical literature and mostly
+I have broken with well established tradition mathematical writing and mostly
 spelled out names for clarity rather than engaging in the strange and random abbreviations
 that I see in most category theory texts. The general fear of readable names in the
 mathematical literature is fascinating to me, having spent most of my life trying to think
