--- a/yoneda-speedrun/yoneda-speedrun.tex
+++ b/yoneda-speedrun/yoneda-speedrun.tex
@@ -153,7 +153,7 @@ means. There are five or six layers of abstraction that I will
 try to explain. As for the larger meaning of the result itself, you are on your own. 
 
 In the spirit of video game speedruns \cite{lobos}, we will skip entire interesting areas
-of material in category theory in the name of getting to the end of our ``game'' as fast
+of category theory in the name of getting to the end of our ``game'' as fast
 as possible. Clearly this will be no substitute for really learning the subject. Any of
 the references listed at the end will be a good place to start to better understand the
 whole game.
