--- a/1608.05314/scratch.tex
+++ b/1608.05314/scratch.tex
@@ -8,7 +8,29 @@
 
 \documentclass[12pt,reqno]{amsart}
 
-\usepackage{a4wide}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.7in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\parindent=2em
+
+%\usepackage{a4wide}
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{amsxtra}
@@ -30,7 +52,6 @@
   \xyoption{dvips}
 \fi
 
-\usepackage{hyperref}
 \usepackage{slashed}
 \usepackage{xr}
 
@@ -42,10 +63,8 @@
 
 % Adjust list environments.
 
-\setlist{}
-\setenumerate{leftmargin=*,labelindent=\parindent}
-\setitemize{leftmargin=*,labelindent=0.5\parindent}
-\setdescription{leftmargin=1em}
+\setlist{topsep=.5em}
+
 
 % Theorem declarations.
 
@@ -123,7 +142,6 @@ Baltimore, MD 21218\\
   USA
 }
 \email{eriehl@math.jhu.edu}
-\thanks{\textit{Acknowledgments:} The first-named author wishes to thank the organizers of the Young Topologists' Meeting 2015 for providing her with the opportunity to speak about this topic; the Hausdorff Research Institute for Mathematics, which hosted her during the period in which these lectures were prepared; and the Simons Foundation and National Science Foundation for financial support through the AMS-Simons Travel Grant program and DMS-1509016. Edoardo Lanari pointed out a circularity in the interpretation of the axiomatization for an $\infty$-cosmos with all objects cofibrant, now corrected. The authors are also grateful for insightful suggestions from the referee that were incorporated into the published manuscript.}
 
 \author[Verity]{Dominic Verity}
 \address{
@@ -156,9 +174,16 @@ These lecture notes were written to accompany a mini course given at the 2015 Yo
 In the first lecture, we define an $\infty$-cosmos and introduce its \emph{homotopy 2-category}, the strict 2-category mentioned above. We illustrate the use of formal category theory to develop the basic theory of equivalences of and adjunctions between $\infty$-categories. In the second lecture, we study limits and colimits of diagrams taking values in an $\infty$-category and relate these concepts to adjunctions between $\infty$-categories. In the third lecture, we define comma $\infty$-categories, which satisfy a particular weak 2-dimensional universal property in the homotopy 2-category. We illustrate the use of comma $\infty$-categories to encode the universal properties of (co)limits and adjointness. Because comma $\infty$-categories are preserved by all functors of $\infty$-cosmoi and created by certain weak equivalences of $\infty$-cosmoi, these characterizations form the foundations for ``model independence'' results. In the fourth lecture, we introduce (co)cartesian fibrations, a certain class of $\infty$-functors, and also consider the special case with groupoidal fibers. We then describe the calculus of \emph{modules} between $\infty$-categories ---  comma $\infty$-categories being the prototypical example --- and use this framework to introduce the Yoneda lemma and develop the theory of pointwise Kan extensions of $\infty$-functors.
 \end{abstract}
   
-  \maketitle
-
+\maketitle
+\newpage
 \tableofcontents
+
+\noindent
+{\textit{Acknowledgments:} The first-named author wishes to thank the organizers of the Young Topologists' Meeting 2015 for providing her with the opportunity to speak about this topic; the Hausdorff Research Institute for Mathematics, which hosted her during the period in which these lectures were prepared; and the Simons Foundation and National Science Foundation for financial support through the AMS-Simons Travel Grant program and DMS-1509016. Edoardo Lanari pointed out a circularity in the interpretation of the axiomatization for an $\infty$-cosmos with all objects cofibrant, now corrected. The authors are also grateful for insightful suggestions from the referee that were incorporated into the published manuscript.}
+
+\newpage
+
+\pagestyle{plain}
 
 \renewcommand\thesection{Lecture~\arabic{section}}
 \section{Basic 2-category theory in an \texorpdfstring{$\infty$}{infinity}-cosmos}\label{sec:2-cat}
@@ -254,7 +279,7 @@ We write $f \dashv u$ to assert that the functor $f \colon B \to A$ is \emph{lef
 \begin{proof}
 Writing $\eta \colon \id_B \To uf$, $\epsilon \colon fu \To \id_A$, $\eta' \colon \id_C \To u'f'$, and $\epsilon' \colon fu \To \id_B$ for the respective units and counits, the pasting diagrams 
 \[ \xymatrix@=1.5em{  C \ar[dr]_{f'} \ar@{=}[rrrr] & & \ar@{}[d]|{\Downarrow \eta'} & & C & & C \ar@{}[d]|(.6){\Downarrow\epsilon'} \ar[dr]^{f'} \\ & B \ar@{=}[rr] \ar[dr]_f & \ar@{}[d]|(.4){\Downarrow\eta} & B \ar[ur]_{u'} & & B \ar[ur]^{u'} \ar@{=}[rr] & \ar@{}[d]|{\Downarrow\epsilon} & B \ar[dr]^f \\ & & A \ar[ur]_u & & A \ar[ur]^u \ar@{=}[rrrr] & & & & A}\] define the unit and counit of $ff' \dashv u'u$ so that the triangle identities
-\[ \xymatrix@=.70em{  C \ar[dr]_{f'} \ar@{=}[rrrr] & & \ar@{}[d]|{\Downarrow \eta'} & & C  \ar@{}[d]|(.6){\Downarrow\epsilon'} \ar[dr]^{f'}& & && C   \ar@/^3ex/[dd]^(.3){ff'} \ar@/_3ex/[dd]_(.3){ff'} \ar@{}[dd]|(.4){\id_{ff'}}|(.6){\Leftarrow} &   &&  & C \ar@{}[d]|(.6){\Downarrow\epsilon'} \ar[dr]|{f'} \ar@{=}[rrrr] & & \ar@{}[d]|{\Downarrow \eta'} & & C & & C  \\ & B \ar@{=}[rr] \ar[dr]_f & \ar@{}[d]|(.4){\Downarrow\eta} & B \ar[ur]|{u'}  \ar@{=}[rr] & \ar@{}[d]|{\Downarrow\epsilon} & B \ar[dr]^f & & \ar@{}[l]|{\displaystyle =} & &&   & B \ar[ur]^{u'} \ar@{=}[rr] & \ar@{}[d]|{\Downarrow\epsilon} & B \ar[dr]|f   \ar@{=}[rr] & \ar@{}[d]|(.4){\Downarrow\eta} & B \ar[ur]_{u'} & & \ar@{}[l]|{\displaystyle =}  \\ & & A \ar[ur]|u  \ar@{=}[rrrr] & & & & A & &  A & &   A \ar[ur]^u \ar@{=}[rrrr] & & & & A \ar[ur]_u & & & &  A \ar@/^3ex/[uu]^(.3){u'u} \ar@/_3ex/[uu]_(.3){u'u} \ar@{}[uu]|(.6){\id_{u'u}}|(.4){\Rightarrow} & &  } \] 
+\[ \xymatrix@=.50em{  C \ar[dr]_{f'} \ar@{=}[rrrr] & & \ar@{}[d]|{\Downarrow \eta'} & & C  \ar@{}[d]|(.6){\Downarrow\epsilon'} \ar[dr]^{f'}& & && C   \ar@/^3ex/[dd]^(.3){ff'} \ar@/_3ex/[dd]_(.3){ff'} \ar@{}[dd]|(.4){\id_{ff'}}|(.6){\Leftarrow} &   &&  & C \ar@{}[d]|(.6){\Downarrow\epsilon'} \ar[dr]|{f'} \ar@{=}[rrrr] & & \ar@{}[d]|{\Downarrow \eta'} & & C & & C  \\ & B \ar@{=}[rr] \ar[dr]_f & \ar@{}[d]|(.4){\Downarrow\eta} & B \ar[ur]|{u'}  \ar@{=}[rr] & \ar@{}[d]|{\Downarrow\epsilon} & B \ar[dr]^f & & \ar@{}[l]|{\displaystyle =} & &&   & B \ar[ur]^{u'} \ar@{=}[rr] & \ar@{}[d]|{\Downarrow\epsilon} & B \ar[dr]|f   \ar@{=}[rr] & \ar@{}[d]|(.4){\Downarrow\eta} & B \ar[ur]_{u'} & & \ar@{}[l]|{\displaystyle =}  \\ & & A \ar[ur]|u  \ar@{=}[rrrr] & & & & A & &  A & &   A \ar[ur]^u \ar@{=}[rrrr] & & & & A \ar[ur]_u & & & &  A \ar@/^3ex/[uu]^(.3){u'u} \ar@/_3ex/[uu]_(.3){u'u} \ar@{}[uu]|(.6){\id_{u'u}}|(.4){\Rightarrow} & &  } \] 
 hold.
 \end{proof}
 
