--- a/1608.05314/scratch.tex
+++ b/1608.05314/scratch.tex
@@ -24,11 +24,12 @@ bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
 \usepackage[noBBpl,sc]{mathpazo}
-\usepackage[papersize={6.7in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\usepackage[papersize={7in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
 \linespread{1.05}
 \sloppy
 \raggedbottom
 \parindent=2em
+\date{19 Sep 2019}
 
 %\usepackage{a4wide}
 \usepackage{amsmath}
@@ -152,8 +153,6 @@ Baltimore, MD 21218\\
 }
 \email{dominic.verity@mq.edu.au}
 
-\date{\today}
-
 \subjclass[2010]{%
   18G55, 55U35
 }
@@ -185,7 +184,7 @@ In the first lecture, we define an $\infty$-cosmos and introduce its \emph{homot
 
 \pagestyle{plain}
 
-\renewcommand\thesection{Lecture~\arabic{section}}
+\renewcommand\thesection{\bf Lecture~\arabic{section}}
 \section{Basic 2-category theory in an \texorpdfstring{$\infty$}{infinity}-cosmos}\label{sec:2-cat}
 \renewcommand\thesection{\arabic{section}}
 
@@ -533,7 +532,7 @@ In fact, these adjunctions can be defined so that the unit and counit 2-cells, a
 
 
 
-\renewcommand\thesection{Lecture~\arabic{section}}
+\renewcommand\thesection{\bf Lecture~\arabic{section}}
 \section{Limits and colimits in \texorpdfstring{$\infty$}{infinity}-categories}\label{sec:limits}
 \renewcommand\thesection{\arabic{section}}
 
@@ -723,7 +722,7 @@ Lemma \ref{lem:ess.unique.1-cell.ind}, proven below, generalizes this result.
 
 This non-uniqueness of representing functors implies, in particular, that the functor of Proposition \ref{prop:weak-cotensors} cannot define an isomorphism of categories. Nonetheless, we are able to make substantial  use of the \emph{weak 2-dimensional universal property} of the arrow construction, as expressed by Proposition \ref{prop:weak-cotensors}, as we shall shortly discover.
 
-\renewcommand\thesection{Lecture~\arabic{section}}
+\renewcommand\thesection{\bf Lecture~\arabic{section}}
 \section{Comma \texorpdfstring{$\infty$}{infinity}-categories and model independence}\label{sec:comma}
 \renewcommand\thesection{\arabic{section}}
 
@@ -1134,7 +1133,7 @@ Combine this with Lemma \refV{lem:equiv-invariance-of-commas}, which says that  
 \end{rmk}
 
 
-\renewcommand\thesection{Lecture~\arabic{section}}
+\renewcommand\thesection{\bf Lecture~\arabic{section}}
 \section{Fibrations, modules, and Kan extensions}\label{sec:modules}
 \renewcommand\thesection{\arabic{section}}
 
