--- a/math-0107188/it.tex
+++ b/math-0107188/it.tex
@@ -1,11 +1,17 @@
 
-\documentclass[twoside]{article}
+\documentclass[12pt]{article}
 
 \usepackage{epsfig}
 \input{diagrams}
 \diagramstyle[repositionpullbacks,midshaft,PostScript=dvips,nohug]
 \input{ab}
 \input{hdpics}
+
+\usepackage[papersize={6.7in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
 
 \renewcommand{\theequation}{\fnsymbol{equation}}
 \renewcommand{\theenumi}{\roman{enumi}}
