--- a/math-0107188/it.tex
+++ b/math-0107188/it.tex
@@ -7,7 +7,6 @@
 \input{ab}
 \input{hdpics}
 
-\usepackage[papersize={6.7in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
 \linespread{1.05}
 \sloppy
 \raggedbottom
@@ -18,6 +17,7 @@
 \hyphenation{mul-ti-cat-e-gory mul-ti-cat-e-go-ries mo-noi-dal mo-noid
 co-do-main}
 
+\usepackage[small]{titlesec}
 
 \begin{document}
 
