--- a/math-0107188/titlepage.tex
+++ b/math-0107188/titlepage.tex
@@ -15,8 +15,6 @@
 \maketitle
 \thispagestyle{empty}
 
-\vfill
-
 \begin{center}	\bfseries
 Abstract
 \end{center}
@@ -31,8 +29,7 @@ independently.  Chatty bibliography follows.
 \end{quotation}
 %
 
-\vfill
-
+\newpage
 \begin{center}
 \bfseries Contents
 \end{center} 
