--- a/0809.4221/simp-05-25-2021.tex
+++ b/0809.4221/simp-05-25-2021.tex
@@ -1,15 +1,46 @@
 \documentclass[12pt]{article}
-\paperheight=11in
-\paperwidth=8.5in
-\renewcommand{\baselinestretch}{1.05}
-\usepackage{amsmath,amsthm,verbatim,amssymb,amsfonts,amscd,diagrams, graphics, mathrsfs, graphicx,hyperref}
-\topmargin0.0cm
-\headheight0.0cm
-\headsep0.0cm
-\oddsidemargin0.0cm
-\textheight23.0cm
-\textwidth16.5cm
-\footskip1.0cm
+\usepackage{amsmath,amsthm,verbatim,amssymb,amsfonts,amscd,diagrams, graphics, mathrsfs, graphicx}
+
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={7in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{cite}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+
 \theoremstyle{plain}
 \newtheorem{theorem}{Theorem}[section]
 \newtheorem{corollary}[theorem]{Corollary}
@@ -125,7 +156,9 @@
 This is an expository introduction to simplicial sets and simplicial homotopy theory with particular focus on relating the combinatorial aspects of the theory to their geometric/topological origins. It is intended to be accessible to students familiar with just the fundamentals of algebraic topology.  
 \end{abstract}
 
+\newpage
 \tableofcontents
+\newpage
 
 
 \section{Introduction}
