--- a/helpers/fixarxiv-palatino-mathpazo.tex
+++ b/helpers/fixarxiv-palatino-mathpazo.tex
@@ -1,4 +1,19 @@
 %\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.7in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{cite}
+
+% hyperref last because otherwise some things go wrong.
 \usepackage[colorlinks=true
 ,breaklinks=true
 ,urlcolor=blue
@@ -13,19 +28,6 @@ bookmarksopen=true,
 bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
-\usepackage[noBBpl,sc]{mathpazo}
-\usepackage[papersize={6.7in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
-\linespread{1.05}
-\sloppy
-\raggedbottom
-\pagestyle{plain}
-
-% these include amsmath and that can cause trouble in older docs.
-\input{../helpers/cmrsum}
-\input{../helpers/fix-underbrace.tex}
-
-\usepackage[small]{titlesec}
-\usepackage{cite}
 
 % make sure there is enough TOC for reasonable pdf bookmarks.
 \setcounter{tocdepth}{3}
