--- a/1907.02904/hcalg.tex
+++ b/1907.02904/hcalg.tex
@@ -1,4 +1,5 @@
 \documentclass[12pt]{article}
+\usepackage[small]{titlesec}
 \usepackage[colorlinks=true
 ,urlcolor=blue
 ,anchorcolor=blue
@@ -20,7 +21,8 @@ bookmarksopenlevel=10
 \usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
 \tolerance=2000
 \hbadness=2000
-\usepackage[small]{titlesec}
+\sloppy
+\raggedbottom
 
 % different \sum and also fixes underbraces
 %\input{../helpers/mnsymbol.tex}
@@ -55,7 +57,6 @@ bookmarksopenlevel=10
 \usepackage{mathrsfs}
 \usepackage{amsthm}
 \usepackage{stmaryrd}
-\pagestyle{headings}
 \usepackage{xy}
 \input xy
 \xyoption{all}
@@ -588,13 +589,15 @@ bookmarksopenlevel=10
 
 \makeindex
 
+\pagestyle{plain}
 
 \begin{document}
 
-
 \maketitle
+\newpage
 
 \tableofcontents
+\newpage
 
 
 %\begin{abstract}
