--- a/0809.4221/simp-05-25-2021.tex
+++ b/0809.4221/simp-05-25-2021.tex
@@ -3,7 +3,7 @@
 
 %\usepackage{amsmath,amsthm,amscd,amssymb}
 \usepackage[noBBpl,sc]{mathpazo}
-\usepackage[papersize={7in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\usepackage[papersize={6.8in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
 \linespread{1.1}
 \sloppy
 \raggedbottom
@@ -53,7 +53,7 @@ bookmarksopenlevel=10
 \newtheorem{definition}[theorem]{Definition}
 \newtheorem*{question}{Question}
 
-\theoremstyle{remark}
+%\theoremstyle{remark}
 \newtheorem{remark}[theorem]{Remark}
 \newtheorem{example}[theorem]{Example}
 
