--- a/1904.07004/bar.tex
+++ b/1904.07004/bar.tex
@@ -187,11 +187,11 @@ defined most easily in terms of its powers and copowers, which exist whenever \N
   \[ \func{\dDelta_\bot}{\nSet} \simeq \func{\dDelta_\top\op}{\nSet} \to \pr{(\drr)}{\nSet} \simeq \pr\cR\S \]
   extracting from any $\dDelta_\bot$-diagram of sets a strong deformation retraction of simplicial sets.
   Finally, by composing with the Yoneda embedding of \N we obtain
-  \begin{equation*}\small
+  \begin{multline*}
   \func{\dDelta_\bot}{\N} \to \func{\dDelta_\bot}{\pr\N\nSet}
-    \simeq \pr\N{\func{\dDelta_\bot}{\nSet}}
+    \simeq \\ \pr\N{\func{\dDelta_\bot}{\nSet}}
     \to \pr\N{\pr\cR\S} \simeq \pr\cR{\pr\N\S}
-  \end{equation*}
+  \end{multline*}
   sending any $X\in\func{\dDelta_\bot}{\N}$ to a strong deformation retraction of \S-valued presheaves on \N.
   The two \S-valued presheaves involved in this retraction are respectively representable by the underlying simplicial object of $X$ and the constant simplicial object at $X_{-1}$; thus the strong deformation retraction lies entirely in $\pr\dDelta\N$.
 \end{proof}
