--- a/1904.07004/univinj.tex
+++ b/1904.07004/univinj.tex
@@ -1,7 +1,33 @@
-\documentclass{amsart}
+\documentclass[12pt]{amsart}
+
+\usepackage[papersize={6.7in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+%\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
 \newif\ifcref\creftrue
 \let\sect\S
 \input{decls}
+
+% hyperref last because otherwise some things go wrong.
+\hypersetup{
+urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue,
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+
 \usepackage{newclude}
 \usepackage[all]{xy}
 \fxsetup{final}
@@ -216,7 +242,11 @@
 \DeclareRobustCommand{\gobblefive}[5]{}
 \newcommand*{\skiptoc}{\addtocontents{toc}{\gobblefive}}
 \setcounter{tocdepth}{1}
+
+\newpage
 \tableofcontents
+\newpage
+
 %\listoffixmes
 
 % https://mathoverflow.net/questions/113957/an-explicit-description-of-injective-fibrations
