newclude breaks href cites

--- a/1904.07004/univinj.tex
+++ b/1904.07004/univinj.tex
@@ -27,8 +27,6 @@ bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
 
-
-\usepackage{newclude}
 \usepackage[all]{xy}
 \fxsetup{final}
 \usetikzlibrary{decorations.pathmorphing}
@@ -44,7 +42,7 @@ bookmarksopenlevel=10
     representing the official policies or endorsements, either
     expressed or implied, of the United States Air Force Research
     Laboratory, the U.S. Government, or Carnegie Mellon University.}
-\date{\today}
+\date{26 Apr 2019}
 \newenvironment{tikzcenter}{\begin{center}\begin{tikzpicture}}{\end{tikzpicture}\end{center}}
 \def\el{\mathsf{El}}
 \def\type{\,\mathsf{type}}
@@ -254,25 +252,25 @@ bookmarksopenlevel=10
 % https://mathoverflow.net/questions/9490/what-are-the-fibrant-objects-in-the-injective-model-structure
 % https://mathoverflow.net/questions/104776/need-m-combinatorial-for-existence-of-injective-model-structure-on-mg
 
-\include*{intro}
+\include{intro}
 
-\include*{2cat}
+\include{2cat}
 
-\include*{nfs}
-\include*{relpres}
-\include*{universes}
-\include*{ttmt}
+\include{nfs}
+\include{relpres}
+\include{universes}
+\include{ttmt}
 
-\include*{bar}
-\include*{injmodel}
+\include{bar}
+\include{injmodel}
 
-\include*{intloc}
-\include*{lexloc}
+\include{intloc}
+\include{lexloc}
 
-\include*{summary}
+\include{summary}
 
 \appendix
-\include*{coherence}
+\include{coherence}
 
 
 \bibliographystyle{alpha}
