--- a/scott-identity-1977/scott-main.tex
+++ b/scott-identity-1977/scott-main.tex
@@ -96,7 +96,7 @@ All bound variables retain their usual existential import (when we say something
 simply what is done naturally in making a {\it relativization} of quantifiers from a
 larger domain to a subdomain. Again in intuitionstic logic we have So take care over relativization, because we cannot say that either the subdomain is empty or not -- thus a given element may be only ``partially'' in the subdomain.
 
-In Section \ref{sec1} , I discuss the idea of allowing existence as a predicate and
+In Section \ref{sec1}, I discuss the idea of allowing existence as a predicate and
 the laws of quantifiers. Section 2 treats the theory of identity and the connections with existence. Questions of strictness and extensionality of relations and functions are discussed in Section 3 along with some examples of first-order theories. As further examples of the use of the system, the familiar theories of apartness and ordering in intuitionistic logic are presented in Section 4 . Section 5 goes briefly into relativization, and Section 6 details the principles of descriptions. Finally, Section 7 reviews the axioms for higher-order intuitionistic logic from this general viewpoint.
 The idea of schematic free variables is not new for classical logic, and the literature on ``free'' logic (or logic without existence assumptions) is extensive.
 (For some earlier references see Scott [21].) All I have done in this essay is
@@ -106,8 +106,52 @@ the way.
 
 \section{Existence and the Laws of Quantifiers}\label{sec1}
 
-foo
+It has often been suggested that identity is a trivial relation, since to say
+``$a = b$'' is trivially true in case $a$ and $b$ are the same and otherwise trivially false. 
+If ``$a$'' and ``$b$'' are ``constant'' names, this criticism may be reasonable; but when the expressions depend on parameters, it is obviously useful to express properties by equations. If an example is needed, take the equation:
 
+$$
+x^2 = x + 1.
+$$
+Whether this is true or false depends on x , and such equations (generally) define a whole class of solutions. We can, of course, in this case investigate by well- known methods exactly which x make the equation true; but with only the most superficial knowledge of the laws of algebra, we can easily assert a {\it conditional} like:
+
+$$
+x^2 = x + 1 \imp x^6 = 8x + 5.
+$$
+Indeed, all the values of $x^n$ can be simplified under the assumption that $x^2 =
+x + 1$. Passing to the many examples we are familiar with in several variables,
+we see that conditional equations may often be verified even when a complete analysis
+of the solution set corresponding to the hypothesis is lacking. The assumption
+is used as if it were true even though by itself it has no determinate truth value 
+owing to the occurrence of parameters.
+
+If we are willing to employ complex equations in this way, why should we not feel 
+free to use complex expressions (terms) without demanding that they always denote? Just as we have to make certain equations conditional on the truth of
+other equations in order that they be valid, we may also have to make some 
+statements conditional on the existence of certain complex terms. In algebra (say, in ring theory), the implication:
+$$
+\forall x.\, \phi(x) \imp \phi(0)
+$$
+is unconditionally valid because the constant 0 is taken as always denoting in
+all rings. However, the statement:
+$$
+\forall x.\, \phi(x) \imp \phi(1/a)
+$$
+cannot be valid in general because not every element a has an inverse. We can circumvent the difficulty by rephrasing the statement:
+$$
+\forall x.\, \phi(x) \imp \forall y. [ a \cdot y = 1 \imp \phi(y) ] \quad,
+$$
+but though correct this seems clumsy. Why not say more directly:
+$$
+\forall x.\, \phi(x) \land E(1/a) \to \phi(1/a)
+$$
+where ``$E(1/a)$'' is to be read as ``$1/a exists$''? Even if we agree that
+$$
+E(1/a) \iff \exists y. a \cdot y = 1
+$$
+(which avoids the notation $1/a$ on the right-hand side of the equivalence), we still want to use $1/a$ in the conclusion. 
+The desire to keep to fractional notation will become even more urgent when more complex rational functions 
+(say, $3x + (4 / 2x^2) + x + 1$) are to be manipulated.
 \begin{thebibliography}{86}
 
 
