--- a/scott-identity-1977/scott-main.tex
+++ b/scott-identity-1977/scott-main.tex
@@ -68,6 +68,11 @@
 \def\BA{B \to A}
 \def\AB{A \to B}
 
+\def\beq{\begin{equation}}
+\def\eeq{\end{equation}}
+\def\beqq{\begin{equation*}}
+\def\eeqq{\end{equation*}}
+
 \makeatletter
 \newcommand*\dotop{\mathpalette\bigcdot@{.6}}
 \newcommand*\bigcdot@[2]{\mathbin{\vcenter{\hbox{\scalebox{#2}{$\m@th#1\bullet$}}}}}
@@ -152,6 +157,34 @@ $$
 (which avoids the notation $1/a$ on the right-hand side of the equivalence), we still want to use $1/a$ in the conclusion. 
 The desire to keep to fractional notation will become even more urgent when more complex rational functions 
 (say, $3x + (4 / 2x^2) + x + 1$) are to be manipulated.
+
+Is the existence predicate E an illusion? Was the equality predicate an illusion? No. We shall find in the next section, with a full statement of the laws of equality, that E can always be defined in terms of quantification:
+$$
+E\tau \iff \exists y.y = \tau
+$$
+where ``$y$'' is a variable not free in the term $\tau$ (and where the equations may be further 
+simplified as in the case of $1/a$). However, both in conception and in the models of (intuitionistic) 
+logic we have in mind, the existence predicate is more basic than equality and prior to it.
+
+For the time being we consider only a one-sorted first-order logic (and postpone the theory of equality 
+to the next section). Higher-order logic (last section) will be regarded as a theory with its own special 
+axioms in a many-sorted first-order (or quantifier) logic, and the passage from one sort to many sorts is essentially trivial
+once the quantifier laws are clear. Mainly the problem is a notational one of giving variables, predicates, 
+functions and compound terms {\it types}. We shall do this precisely in the last section. 
+As far as intuitionistic propositional calculus is concerned, no revision is necessary for 
+predicate calculus, and we assume this as known. (A recent reference is Dummett [5].) 
+In predicate calculus, then, we
+use all the usual propositional laws (as applied to arbitrary formulae of the first-order language) 
+together with a completely unrestricted rule of {\it modus ponens}:
+\beq
+\inferrule
+  {\phi\,, \, \phi \imp \psi}
+  {\psi}
+\tag{MP}
+\label{MP}
+\eeq
+without regard as to which free variables are shared between $\phi$ and $\psi$. 
+
 \begin{thebibliography}{86}
 
 
