--- a/1007.2925v2/infinity.tex
+++ b/1007.2925v2/infinity.tex
@@ -1,4 +1,4 @@
-\documentclass[12pt]{amsart}
+\documentclass[12pt]{psu-amsart}
 
 \input{decls}
 
@@ -19,11 +19,13 @@ bookmarksopenlevel=10
 %\usepackage{amsmath,amsthm,amscd,amssymb}
 \linespread{1.1}
 %\usepackage[letterpaper, margin=1.2in]{geometry}
-\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\usepackage[papersize={6.9in, 10.0in}, footskip=1cm,left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
 \tolerance=2000
 \hbadness=2000
 
 \usepackage{comment}
+
+\input{../helpers/ams-bold}
 
 \tikzset{lab/.style={auto,font=\scriptsize}} % arrow labels
 \usetikzlibrary{arrows}
